# tothemoon-i18n

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  translate_all.sh
config/: languages.yml
data/: TTM_EN.json  TTM_ES.json  TTM_RU.json
glossary/: bg.yml  de.yml  default.yml  es.yml  fr.yml  hi.yml  id.yml  ja.yml  ko.yml  ms.yml  nl.yml  pl.yml  pt-br.yml  pt.yml  ru.yml  th.yml  tl.yml  tr.yml  uk.yml  vi.yml  zh-Hans.yml
prompts/: fewshot.json  system.txt
prompts/fewshot/: bg.json  de.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  ms.json  nl.json  pl.json  pt-br.json  pt.json  ru.json  th.json  tl.json  tr.json  uk.json  vi.json  zh-Hans.json
tests/: __init__.py  test_batcher.py  test_pipeline.py  test_protect.py  test_structures.py  test_validators.py
tools/: batch_translate.py  batcher.py  bootstrap_locale.py  config.py  interfaces.py  lint_i18n.py  pipeline.py  protect.py  provider_openai.py  structures.py  ttm_translate.py  validators.py
